--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 	"dependencies": {
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-tweet": "^3.2.1",
+		"react-twitter-embed": "^4.0.4",
 		"socket.io-client": "^4.8.1"
 	},
 	"devDependencies": {
