--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-helmet": "^6.1.0",
 		"react-intl": "^7.0.1",
 		"react-tweet": "^3.2.1",
 		"react-twitter-embed": "^4.0.4",
@@ -21,6 +22,7 @@
 		"@eslint/js": "^9.13.0",
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
+		"@types/react-helmet": "^6.1.11",
 		"@vitejs/plugin-react-swc": "^3.5.0",
 		"eslint": "^9.13.0",
 		"eslint-plugin-react-hooks": "^5.0.0",
@@ -31,4 +33,3 @@
 		"vite": "^5.4.10"
 	}
 }
-
